# UR3e_wSoftGripper_description

./: CMakeLists.txt  package.xml
config/ur3e_with_hand/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
launch/: load_ur.launch  load_ur3ehand.launch  view_ur3ehand.launch
meshes/ur3e/collision/: hand.STL  oldhand.STL
urdf/: ur.xacro  ur3e_with_hand.urdf
urdf/inc/: ur_macro.xacro
