<?xml version="1.0"?>
<package format="2">
  <name>ur3ehand_description</name>
  <version>0.0.0</version>
  <description>Description package for UR3e with custom hand end effector</description>
  <author email="steven.swanbeck@gmail.com">Steven Swanbeck</author>
  <maintainer email="steven.swanbeck@gmail.com">Steven Swanbeck</maintainer>
  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
  
</package>
